# the-private-ledger

./: .gitignore  CONTRIBUTING.md  README.md  dev-requirements.txt  docker-compose.yml  pyproject.toml  requirements.txt
backend/api/: .gitignore  CONTRIBUTING.md  README.md  openapi.json  openapi.yaml  pyproject.toml
backend/api/.github/workflows/: ci.yml  release.yml
backend/api/api/: main.py  simulate.py
backend/api/api/domain/data/: Account.csv  Account.xlsx  Ledger.csv  Performance.backup  Performance.csv  Performance.xlsx  Transaction.csv  Transaction.xlsx
backend/api/api/domain/models/: account.py  ledger.py  master_tracking_sheet.py  metrics.py  (+5 more)
backend/api/samples/: README.md
backend/api/samples/args_kwargs/: README.md  args_kwargs.py
backend/api/samples/assert/: README.md  assert.py
backend/api/samples/asychronous_programming/: README.md  asychronous_programming.py
backend/api/samples/classes/: README.md  classes.py
backend/api/samples/common_mistakes/: README.md  common_mistakes.py
backend/api/samples/control_flow/: README.md  control_flow.py
backend/api/samples/counters/: README.md  counters.py
backend/api/samples/dataclasses/: README.md  after.py  before.py
backend/api/samples/defaultdict/: README.md  defaultdict.py
backend/api/samples/dev_dependencies/: README.md  dev_dependencies.py
backend/api/samples/dictionaries/: README.md  dictionaries.py
backend/api/samples/dsa/: README.md
backend/api/samples/exceptions/: README.md  exceptions.py
backend/api/samples/functions/: README.md  functions.py
backend/api/samples/generators/: README.md  generators.py
backend/api/samples/hello_world/: README.md
backend/api/samples/introduction/: README.md  introduction.py
backend/api/samples/iterables_and_generators/: README.md  iterables_and_generators.py
backend/api/samples/list_comprehensions/: README.md  list_comprehensions.py
backend/api/samples/lists/: README.md  lists.py
backend/api/samples/logging/: README.md  logging.py
backend/api/samples/modules/: README.md  modules.py
backend/api/samples/naming_conventions/: README.md  conventions.py
backend/api/samples/randomness/: README.md  randomness.py
backend/api/samples/regex/: README.md  regex.py
backend/api/samples/rich/: README.md  main.py
backend/api/samples/sets/: README.md  sets.py
backend/api/samples/sorting/: README.md  sorting.py
backend/api/samples/strings/: README.md  strings.py
backend/api/samples/truthiness/: README.md  truthiness.py
backend/api/samples/tuples/: README.md  tuples.py
backend/api/samples/type_annotations/: README.md  type_annotations.py
backend/api/samples/virtual_environments/: README.md  virtual_environments.py
backend/api/samples/whitespace_formatting/: README.md  whitespace_formatting.py
backend/api/samples/zip_argument_unpacking/: README.md  zip_argument_unpacking.py
backend/api/scripts/: format.ps1  format.sh  install.sh  lint.ps1  lint.sh  run.ps1  run.sh  test.sh
backend/api/tests/: __init__.py  test_args_kwargs.py  test_classes.py  test_control_flow.py  test_counters.py  test_defaultdict.py  test_dictionaries.py  test_functions.py  test_generators.py  test_hello_world.py  test_list_comprehensions.py  test_lists.py  test_sets.py  test_sorting.py  test_strings.py  test_truthiness.py  test_tuples.py  test_type_annotations.py
backend/api/tests/data/: test_account_csv.py  test_performance_csv.py  test_transaction_csv.py
backend/api/tests/models/: test_account.py  test_ledger.py  test_master_tracking_sheet.py  test_metrics.py  test_performance.py  test_performance_tracker.py  test_summary.py  test_transaction.py  test_transactions.py
(+248 files in other folders)
