
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bellanov-fantasy-notebook"
version = "0.2.0"
authors = [
  { name="Bellanov Apilli", email="bellanovapilli@gmail.com" },
]
description = "Template for general Python development."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.hatch.build.targets.wheel]
packages = ["notebooks/"]

[project.urls]
Homepage = "https://github.com/bellanov/notebook-template"
Issues = "https://github.com/bellanov/notebook-template/issues"

[tool.coverage.run]
omit = [
    "tests/*",
    "*/test_*.py",
]

[[tool.mypy.overrides]]
module = "notebooks.env"
disable_error_code = ["attr-defined", "no-untyped-def"]

[[tool.mypy.overrides]]
module = "notebooks.bar"
disable_error_code = ["attr-defined", "no-untyped-def"]
