
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "andy-python-template"
version = "0.2.0"
authors = [
  { name="Bellanov Apilli", email="bellanovapilli@gmail.com" },
]
description = "Template for general Python development."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx",
    "tenacity",
]

[project.optional-dependencies]
dev = [
    "black",
    "coverage",
    "flake8",
    "ipython",
    "isort",
    "mypy",
    "pytest",
]

[tool.hatch.build.targets.wheel]
packages = ["samples/"]

[project.urls]
Homepage = "https://github.com/bellanov/python-samples"
Issues = "https://github.com/bellanov/python-samples/issues"

[tool.coverage.run]
omit = [
    "tests/*",
    "*/test_*.py",
]

[tool.isort]
profile = "black"
