
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "the-private-ledger"
version = "0.2.0"
authors = [
  { name="Bellanov Apilli", email="bellanovapilli@gmail.com" },
]
description = "Template for general Python development."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi[standard]",
    "httpx",
    "pandas",
    "tenacity",
]

[project.optional-dependencies]
dev = [
    "black",
    "coverage",
    "flake8",
    "ipython",
    "isort",
    "mypy",
    "pytest",
]

[tool.hatch.build.targets.wheel]
packages = ["api/"]

[project.urls]
Homepage = "https://github.com/bellanov/python-samples"
Issues = "https://github.com/bellanov/python-samples/issues"

[tool.coverage.run]
omit = [
    "tests/*",
    "*/test_*.py",
]

[tool.isort]
profile = "black"
